# exa-spim-control

./: .gitignore  Camera.py  DataLogger.py  DataProcessor.py  DataWriter.py  FileTransfer.py  README.md  UserInterface.py  WaveformGenerator.py  config.py  exaSPIM_instrument.json  generate_waveforms.py  main.py  main_script.py  ni.py  pyproject.toml
doc/: exaspim_setup.md
doc/GenICam/Reference Implementation/: GenICam_Runtime_clang61_Maci64_x64_v3_0_2.tgz  GenICam_Runtime_gcc421_Linux32_i86_v3_0_2.tgz  GenICam_Runtime_gcc421_Linux64_x64_v3_0_2.tgz  GenICam_Runtime_gcc46_Linux32_ARMhf_v3_0_2.tgz  GenICam_Runtime_gcc46_Linux32_ARMsf_v3_0_2.tgz  GenICam_Runtime_gcc48_Linux64_ARM_v3_0_2.tgz  GenICam_SDK_clang61_Maci64_x64_v3_0_2.tgz  GenICam_SDK_gcc421_Linux32_i86_v3_0_2.tgz  GenICam_SDK_gcc421_Linux64_x64_v3_0_2.tgz  GenICam_SDK_gcc46_Linux32_ARMhf_v3_0_2.tgz  GenICam_SDK_gcc46_Linux32_ARMsf_v3_0_2.tgz  GenICam_SDK_gcc48_Linux64_ARM_v3_0_2.tgz
doc/GenICam/SFNC/: PFNC.h
egrabber/: discovery.py  egentl.py  egrabber.py  query.py  utils.py
egrabber/recorder/: __init__.py  api.py  cli.py  errors.py
examples/: stack_writer_mem_test.py  view_config.py
exaspim/: config.py  exaspim.py  exaspim_config.py
exaspim/data_structures/: shared_double_buffer.py
exaspim/devices/: Camera.py  aotf_laser.py  camera.py  ni.py  waveform_generator.py
exaspim/operations/: gpu_img_downsample.py  waveform_generator.py
exaspim/processes/: DataLogger.py  DataWriter.py  data_logger.py  file_transfer.py  mip_processor.py  stack_writer.py
imaris_writer/: PyImarisWriter.py
